samples/_failures_safe/1761216439_863dd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95e3b758.c: In function ‘main’:
./samples/SAFE/__tmp_95e3b758.c:127:9: error: expected expression at end of input
  127 |         if (scanf("%zu %zu", &rows, &cols) !=
      |         ^~
./samples/SAFE/__tmp_95e3b758.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95e3b758.c:127:9: error: expected declaration or statement at end of input
